--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "latlng-conv",
   "version": "1.0.0",
-  "description": "Latitude/longitude coordinates conversions",
+  "description": "Latitude and longitude coordinates converter",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
