--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "latlng-conv",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Latitude and longitude coordinates converter",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/mingfeng/latlng-conv",
   "license": "MIT",
-  "keywords": ["latlng", "converter", "wgs84", "coordinates"],
+  "keywords": [
+    "latlng",
+    "converter",
+    "wgs84",
+    "coordinates"
+  ],
   "scripts": {
     "info": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
